--- a/Spring_Basic_Authentication/pom.xml
+++ b/Spring_Basic_Authentication/pom.xml
@@ -31,6 +31,7 @@
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
 		<jersey.version>1.17.1</jersey.version>
+		<spring.security.version>4.0.4.RELEASE</spring.security.version>
 	</properties>
 	<dependencies>
 		<!-- Spring dependencies -->
@@ -51,6 +52,27 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<!-- spring security -->
+		<dependency> 
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		
+		
 		<!-- JSTL tags jar -->
 		<dependency>
 			<groupId>jstl</groupId>
