--- a/Spring_Custom_Authentication/pom.xml
+++ b/Spring_Custom_Authentication/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.core.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate.core.version}</version>
+		</dependency>
 		<!-- DBCP -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -124,6 +129,13 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.10</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901-1.jdbc4</version>
+		</dependency>
+				
 		
 		<!-- JUnit Jars -->
 		<dependency>
