--- a/Spring_Custom_Authentication/pom.xml
+++ b/Spring_Custom_Authentication/pom.xml
@@ -79,7 +79,11 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
 		<!-- JSTL tags jar -->
 		<dependency>
 			<groupId>jstl</groupId>
